--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1020,6 +1020,12 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .h-1 {
+    height: calc(var(--spacing) * 1);
+  }
+  .h-1\/2 {
+    height: calc(1/2 * 100%);
+  }
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
@@ -1059,9 +1065,6 @@
   .h-\[20rem\] {
     height: 20rem;
   }
-  .h-\[34rem\] {
-    height: 34rem;
-  }
   .h-\[103vh\] {
     height: 103vh;
   }
@@ -1079,6 +1082,9 @@
   }
   .h-\[30rem\] {
     height: 30rem;
+  }
+  .h-\[34rem\] {
+    height: 34rem;
   }
   .h-\[35rem\] {
     height: 35rem;
@@ -1149,6 +1155,9 @@
   .w-72 {
     width: calc(var(--spacing) * 72);
   }
+  .w-\[35rem\] {
+    width: 35rem;
+  }
   .w-\[60rem\] {
     width: 60rem;
   }
@@ -1157,6 +1166,9 @@
   }
   .w-\[70rem\] {
     width: 70rem;
+  }
+  .w-\[75rem\] {
+    width: 75rem;
   }
   .w-\[76rem\] {
     width: 76rem;
@@ -2199,6 +2211,9 @@
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
@@ -2417,6 +2432,10 @@
   .font-extrabold {
     --tw-font-weight: var(--font-weight-extrabold);
     font-weight: var(--font-weight-extrabold);
+  }
+  .font-extralight {
+    --tw-font-weight: var(--font-weight-extralight);
+    font-weight: var(--font-weight-extralight);
   }
   .font-light {
     --tw-font-weight: var(--font-weight-light);
@@ -3202,6 +3221,21 @@
       }
     }
   }
+  .max-sm\:top-1 {
+    @media (width < 40rem) {
+      top: calc(var(--spacing) * 1);
+    }
+  }
+  .max-sm\:top-2 {
+    @media (width < 40rem) {
+      top: calc(var(--spacing) * 2);
+    }
+  }
+  .max-sm\:top-3 {
+    @media (width < 40rem) {
+      top: calc(var(--spacing) * 3);
+    }
+  }
   .max-sm\:top-40 {
     @media (width < 40rem) {
       top: calc(var(--spacing) * 40);
@@ -3217,9 +3251,54 @@
       right: calc(var(--spacing) * 20);
     }
   }
+  .max-sm\:-bottom-2 {
+    @media (width < 40rem) {
+      bottom: calc(var(--spacing) * -2);
+    }
+  }
+  .max-sm\:bottom-0 {
+    @media (width < 40rem) {
+      bottom: calc(var(--spacing) * 0);
+    }
+  }
+  .max-sm\:bottom-3 {
+    @media (width < 40rem) {
+      bottom: calc(var(--spacing) * 3);
+    }
+  }
+  .max-sm\:bottom-4 {
+    @media (width < 40rem) {
+      bottom: calc(var(--spacing) * 4);
+    }
+  }
+  .max-sm\:bottom-5 {
+    @media (width < 40rem) {
+      bottom: calc(var(--spacing) * 5);
+    }
+  }
+  .max-sm\:left-0 {
+    @media (width < 40rem) {
+      left: calc(var(--spacing) * 0);
+    }
+  }
+  .max-sm\:left-1 {
+    @media (width < 40rem) {
+      left: calc(var(--spacing) * 1);
+    }
+  }
+  .max-sm\:left-2 {
+    @media (width < 40rem) {
+      left: calc(var(--spacing) * 2);
+    }
+  }
   .max-sm\:left-3 {
     @media (width < 40rem) {
       left: calc(var(--spacing) * 3);
+    }
+  }
+  .max-sm\:left-4 {
+    @media (width < 40rem) {
+      left: calc(var(--spacing) * 4);
     }
   }
   .max-sm\:left-6 {
@@ -3287,9 +3366,64 @@
       display: none;
     }
   }
+  .max-sm\:h-2 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 2);
+    }
+  }
+  .max-sm\:h-3 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 3);
+    }
+  }
+  .max-sm\:h-4 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 4);
+    }
+  }
   .max-sm\:h-5 {
     @media (width < 40rem) {
       height: calc(var(--spacing) * 5);
+    }
+  }
+  .max-sm\:h-6 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 6);
+    }
+  }
+  .max-sm\:h-7 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 7);
+    }
+  }
+  .max-sm\:h-8 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 8);
+    }
+  }
+  .max-sm\:h-9 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 9);
+    }
+  }
+  .max-sm\:h-10 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 10);
+    }
+  }
+  .max-sm\:h-11 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 11);
+    }
+  }
+  .max-sm\:h-12 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 12);
+    }
+  }
+  .max-sm\:h-14 {
+    @media (width < 40rem) {
+      height: calc(var(--spacing) * 14);
     }
   }
   .max-sm\:h-48 {
@@ -3302,6 +3436,21 @@
       height: 14rem;
     }
   }
+  .max-sm\:h-\[20rem\] {
+    @media (width < 40rem) {
+      height: 20rem;
+    }
+  }
+  .max-sm\:h-\[30rem\] {
+    @media (width < 40rem) {
+      height: 30rem;
+    }
+  }
+  .max-sm\:h-\[35rem\] {
+    @media (width < 40rem) {
+      height: 35rem;
+    }
+  }
   .max-sm\:h-\[580px\] {
     @media (width < 40rem) {
       height: 580px;
@@ -3310,6 +3459,31 @@
   .max-sm\:h-auto {
     @media (width < 40rem) {
       height: auto;
+    }
+  }
+  .max-sm\:w-3\/4 {
+    @media (width < 40rem) {
+      width: calc(3/4 * 100%);
+    }
+  }
+  .max-sm\:w-\[35rem\] {
+    @media (width < 40rem) {
+      width: 35rem;
+    }
+  }
+  .max-sm\:w-\[40rem\] {
+    @media (width < 40rem) {
+      width: 40rem;
+    }
+  }
+  .max-sm\:w-\[42rem\] {
+    @media (width < 40rem) {
+      width: 42rem;
+    }
+  }
+  .max-sm\:w-\[43rem\] {
+    @media (width < 40rem) {
+      width: 43rem;
     }
   }
   .max-sm\:w-auto {
@@ -3362,6 +3536,21 @@
   .max-sm\:px-1 {
     @media (width < 40rem) {
       padding-inline: calc(var(--spacing) * 1);
+    }
+  }
+  .max-sm\:px-2 {
+    @media (width < 40rem) {
+      padding-inline: calc(var(--spacing) * 2);
+    }
+  }
+  .max-sm\:px-8 {
+    @media (width < 40rem) {
+      padding-inline: calc(var(--spacing) * 8);
+    }
+  }
+  .max-sm\:px-10 {
+    @media (width < 40rem) {
+      padding-inline: calc(var(--spacing) * 10);
     }
   }
   .max-sm\:pt-10 {
@@ -3436,10 +3625,116 @@
       line-height: var(--tw-leading, var(--text-sm--line-height));
     }
   }
+  .max-sm\:text-xl {
+    @media (width < 40rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
   .max-sm\:text-xs {
     @media (width < 40rem) {
       font-size: var(--text-xs);
       line-height: var(--tw-leading, var(--text-xs--line-height));
+    }
+  }
+  .max-sm\:text-\[5px\] {
+    @media (width < 40rem) {
+      font-size: 5px;
+    }
+  }
+  .max-sm\:text-\[8\.7px\] {
+    @media (width < 40rem) {
+      font-size: 8.7px;
+    }
+  }
+  .max-sm\:text-\[8px\] {
+    @media (width < 40rem) {
+      font-size: 8px;
+    }
+  }
+  .max-sm\:text-\[9\.1px\] {
+    @media (width < 40rem) {
+      font-size: 9.1px;
+    }
+  }
+  .max-sm\:text-\[9\.2px\] {
+    @media (width < 40rem) {
+      font-size: 9.2px;
+    }
+  }
+  .max-sm\:text-\[9\.3px\] {
+    @media (width < 40rem) {
+      font-size: 9.3px;
+    }
+  }
+  .max-sm\:text-\[9\.4px\] {
+    @media (width < 40rem) {
+      font-size: 9.4px;
+    }
+  }
+  .max-sm\:text-\[9\.5px\] {
+    @media (width < 40rem) {
+      font-size: 9.5px;
+    }
+  }
+  .max-sm\:text-\[9\.7px\] {
+    @media (width < 40rem) {
+      font-size: 9.7px;
+    }
+  }
+  .max-sm\:text-\[9\.8px\] {
+    @media (width < 40rem) {
+      font-size: 9.8px;
+    }
+  }
+  .max-sm\:text-\[9\.9px\] {
+    @media (width < 40rem) {
+      font-size: 9.9px;
+    }
+  }
+  .max-sm\:text-\[9px\] {
+    @media (width < 40rem) {
+      font-size: 9px;
+    }
+  }
+  .max-sm\:text-\[10\.1px\] {
+    @media (width < 40rem) {
+      font-size: 10.1px;
+    }
+  }
+  .max-sm\:text-\[10\.9px\] {
+    @media (width < 40rem) {
+      font-size: 10.9px;
+    }
+  }
+  .max-sm\:text-\[10px\] {
+    @media (width < 40rem) {
+      font-size: 10px;
+    }
+  }
+  .max-sm\:text-\[11px\] {
+    @media (width < 40rem) {
+      font-size: 11px;
+    }
+  }
+  .max-sm\:text-\[12\.4px\] {
+    @media (width < 40rem) {
+      font-size: 12.4px;
+    }
+  }
+  .max-sm\:text-\[12px\] {
+    @media (width < 40rem) {
+      font-size: 12px;
+    }
+  }
+  .max-sm\:text-\[13px\] {
+    @media (width < 40rem) {
+      font-size: 13px;
+    }
+  }
+  .max-sm\:text-\[9xpx\] {
+    @media (width < 40rem) {
+      color: 9xpx;
     }
   }
   .sm\:write {
