--- a/src/css/output.css
+++ b/src/css/output.css
@@ -627,9 +627,6 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-2 {
     top: calc(var(--spacing) * 2);
   }
@@ -1020,12 +1017,6 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-1 {
-    height: calc(var(--spacing) * 1);
-  }
-  .h-1\/2 {
-    height: calc(1/2 * 100%);
-  }
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
@@ -1062,6 +1053,15 @@
   .h-64 {
     height: calc(var(--spacing) * 64);
   }
+  .h-\[103vh\] {
+    height: 103vh;
+  }
+  .h-\[105vh\] {
+    height: 105vh;
+  }
+  .h-\[15rem\] {
+    height: 15rem;
+  }
   .h-\[20rem\] {
     height: 20rem;
   }
@@ -1074,18 +1074,6 @@
   .h-\[30rem\] {
     height: 30rem;
   }
-  .h-\[50rem\] {
-    height: 50rem;
-  }
-  .h-\[103vh\] {
-    height: 103vh;
-  }
-  .h-\[105vh\] {
-    height: 105vh;
-  }
-  .h-\[15rem\] {
-    height: 15rem;
-  }
   .h-\[34rem\] {
     height: 34rem;
   }
@@ -1095,8 +1083,8 @@
   .h-\[40rem\] {
     height: 40rem;
   }
-  .h-\[140vh\] {
-    height: 140vh;
+  .h-\[50rem\] {
+    height: 50rem;
   }
   .h-\[680px\] {
     height: 680px;
@@ -1155,20 +1143,11 @@
   .w-72 {
     width: calc(var(--spacing) * 72);
   }
-  .w-\[35rem\] {
-    width: 35rem;
-  }
-  .w-\[60rem\] {
-    width: 60rem;
-  }
   .w-\[64rem\] {
     width: 64rem;
   }
   .w-\[70rem\] {
     width: 70rem;
-  }
-  .w-\[75rem\] {
-    width: 75rem;
   }
   .w-\[76rem\] {
     width: 76rem;
@@ -2211,9 +2190,6 @@
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
-  .px-1 {
-    padding-inline: calc(var(--spacing) * 1);
-  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
@@ -2268,12 +2244,6 @@
   .pt-36 {
     padding-top: calc(var(--spacing) * 36);
   }
-  .pr-0 {
-    padding-right: calc(var(--spacing) * 0);
-  }
-  .pr-1 {
-    padding-right: calc(var(--spacing) * 1);
-  }
   .pr-2 {
     padding-right: calc(var(--spacing) * 2);
   }
@@ -2300,9 +2270,6 @@
   }
   .pb-\[12rem\] {
     padding-bottom: 12rem;
-  }
-  .pl-2 {
-    padding-left: calc(var(--spacing) * 2);
   }
   .pl-3 {
     padding-left: calc(var(--spacing) * 3);
@@ -2432,10 +2399,6 @@
   .font-extrabold {
     --tw-font-weight: var(--font-weight-extrabold);
     font-weight: var(--font-weight-extrabold);
-  }
-  .font-extralight {
-    --tw-font-weight: var(--font-weight-extralight);
-    font-weight: var(--font-weight-extralight);
   }
   .font-light {
     --tw-font-weight: var(--font-weight-light);
@@ -3231,11 +3194,6 @@
       top: calc(var(--spacing) * 2);
     }
   }
-  .max-sm\:top-3 {
-    @media (width < 40rem) {
-      top: calc(var(--spacing) * 3);
-    }
-  }
   .max-sm\:top-40 {
     @media (width < 40rem) {
       top: calc(var(--spacing) * 40);
@@ -3256,11 +3214,6 @@
       bottom: calc(var(--spacing) * -2);
     }
   }
-  .max-sm\:bottom-0 {
-    @media (width < 40rem) {
-      bottom: calc(var(--spacing) * 0);
-    }
-  }
   .max-sm\:bottom-3 {
     @media (width < 40rem) {
       bottom: calc(var(--spacing) * 3);
@@ -3269,11 +3222,6 @@
   .max-sm\:bottom-4 {
     @media (width < 40rem) {
       bottom: calc(var(--spacing) * 4);
-    }
-  }
-  .max-sm\:bottom-5 {
-    @media (width < 40rem) {
-      bottom: calc(var(--spacing) * 5);
     }
   }
   .max-sm\:left-0 {
@@ -3296,34 +3244,9 @@
       left: calc(var(--spacing) * 3);
     }
   }
-  .max-sm\:left-4 {
-    @media (width < 40rem) {
-      left: calc(var(--spacing) * 4);
-    }
-  }
   .max-sm\:left-6 {
     @media (width < 40rem) {
       left: calc(var(--spacing) * 6);
-    }
-  }
-  .max-sm\:left-40 {
-    @media (width < 40rem) {
-      left: calc(var(--spacing) * 40);
-    }
-  }
-  .max-sm\:left-44 {
-    @media (width < 40rem) {
-      left: calc(var(--spacing) * 44);
-    }
-  }
-  .max-sm\:left-48 {
-    @media (width < 40rem) {
-      left: calc(var(--spacing) * 48);
-    }
-  }
-  .max-sm\:left-\[170px\] {
-    @media (width < 40rem) {
-      left: 170px;
     }
   }
   .max-sm\:mx-1 {
@@ -3341,19 +3264,24 @@
       margin-inline: calc(var(--spacing) * 5);
     }
   }
+  .max-sm\:mt-0 {
+    @media (width < 40rem) {
+      margin-top: calc(var(--spacing) * 0);
+    }
+  }
   .max-sm\:mt-20 {
     @media (width < 40rem) {
       margin-top: calc(var(--spacing) * 20);
     }
   }
+  .max-sm\:mt-36 {
+    @media (width < 40rem) {
+      margin-top: calc(var(--spacing) * 36);
+    }
+  }
   .max-sm\:mb-3 {
     @media (width < 40rem) {
       margin-bottom: calc(var(--spacing) * 3);
-    }
-  }
-  .max-sm\:mb-4 {
-    @media (width < 40rem) {
-      margin-bottom: calc(var(--spacing) * 4);
     }
   }
   .max-sm\:flex {
@@ -3369,11 +3297,6 @@
   .max-sm\:h-2 {
     @media (width < 40rem) {
       height: calc(var(--spacing) * 2);
-    }
-  }
-  .max-sm\:h-3 {
-    @media (width < 40rem) {
-      height: calc(var(--spacing) * 3);
     }
   }
   .max-sm\:h-4 {
@@ -3406,44 +3329,14 @@
       height: calc(var(--spacing) * 9);
     }
   }
-  .max-sm\:h-10 {
-    @media (width < 40rem) {
-      height: calc(var(--spacing) * 10);
-    }
-  }
-  .max-sm\:h-11 {
-    @media (width < 40rem) {
-      height: calc(var(--spacing) * 11);
-    }
-  }
   .max-sm\:h-12 {
     @media (width < 40rem) {
       height: calc(var(--spacing) * 12);
     }
   }
-  .max-sm\:h-14 {
-    @media (width < 40rem) {
-      height: calc(var(--spacing) * 14);
-    }
-  }
-  .max-sm\:h-48 {
-    @media (width < 40rem) {
-      height: calc(var(--spacing) * 48);
-    }
-  }
   .max-sm\:h-\[14rem\] {
     @media (width < 40rem) {
       height: 14rem;
-    }
-  }
-  .max-sm\:h-\[20rem\] {
-    @media (width < 40rem) {
-      height: 20rem;
-    }
-  }
-  .max-sm\:h-\[30rem\] {
-    @media (width < 40rem) {
-      height: 30rem;
     }
   }
   .max-sm\:h-\[35rem\] {
@@ -3456,39 +3349,9 @@
       height: 580px;
     }
   }
-  .max-sm\:h-auto {
+  .max-sm\:w-4 {
     @media (width < 40rem) {
-      height: auto;
-    }
-  }
-  .max-sm\:w-3\/4 {
-    @media (width < 40rem) {
-      width: calc(3/4 * 100%);
-    }
-  }
-  .max-sm\:w-\[35rem\] {
-    @media (width < 40rem) {
-      width: 35rem;
-    }
-  }
-  .max-sm\:w-\[40rem\] {
-    @media (width < 40rem) {
-      width: 40rem;
-    }
-  }
-  .max-sm\:w-\[42rem\] {
-    @media (width < 40rem) {
-      width: 42rem;
-    }
-  }
-  .max-sm\:w-\[43rem\] {
-    @media (width < 40rem) {
-      width: 43rem;
-    }
-  }
-  .max-sm\:w-auto {
-    @media (width < 40rem) {
-      width: auto;
+      width: calc(var(--spacing) * 4);
     }
   }
   .max-sm\:w-full {
@@ -3516,11 +3379,6 @@
       flex-direction: column;
     }
   }
-  .max-sm\:rounded-lg {
-    @media (width < 40rem) {
-      border-radius: var(--radius-lg);
-    }
-  }
   .max-sm\:rounded-t-lg {
     @media (width < 40rem) {
       border-top-left-radius: var(--radius-lg);
@@ -3531,6 +3389,21 @@
     @media (width < 40rem) {
       border-bottom-right-radius: 0;
       border-bottom-left-radius: 0;
+    }
+  }
+  .max-sm\:p-10 {
+    @media (width < 40rem) {
+      padding: calc(var(--spacing) * 10);
+    }
+  }
+  .max-sm\:p-12 {
+    @media (width < 40rem) {
+      padding: calc(var(--spacing) * 12);
+    }
+  }
+  .max-sm\:p-20 {
+    @media (width < 40rem) {
+      padding: calc(var(--spacing) * 20);
     }
   }
   .max-sm\:px-1 {
@@ -3546,16 +3419,6 @@
   .max-sm\:px-8 {
     @media (width < 40rem) {
       padding-inline: calc(var(--spacing) * 8);
-    }
-  }
-  .max-sm\:px-10 {
-    @media (width < 40rem) {
-      padding-inline: calc(var(--spacing) * 10);
-    }
-  }
-  .max-sm\:pt-10 {
-    @media (width < 40rem) {
-      padding-top: calc(var(--spacing) * 10);
     }
   }
   .max-sm\:pt-16 {
@@ -3637,11 +3500,6 @@
       line-height: var(--tw-leading, var(--text-xs--line-height));
     }
   }
-  .max-sm\:text-\[5px\] {
-    @media (width < 40rem) {
-      font-size: 5px;
-    }
-  }
   .max-sm\:text-\[8\.4px\] {
     @media (width < 40rem) {
       font-size: 8.4px;
@@ -3662,24 +3520,9 @@
       font-size: 8.8px;
     }
   }
-  .max-sm\:text-\[8\.9px\] {
-    @media (width < 40rem) {
-      font-size: 8.9px;
-    }
-  }
   .max-sm\:text-\[8px\] {
     @media (width < 40rem) {
       font-size: 8px;
-    }
-  }
-  .max-sm\:text-\[9\.1px\] {
-    @media (width < 40rem) {
-      font-size: 9.1px;
-    }
-  }
-  .max-sm\:text-\[9\.2px\] {
-    @media (width < 40rem) {
-      font-size: 9.2px;
     }
   }
   .max-sm\:text-\[9\.3px\] {
@@ -3697,39 +3540,9 @@
       font-size: 9.5px;
     }
   }
-  .max-sm\:text-\[9\.6px\] {
-    @media (width < 40rem) {
-      font-size: 9.6px;
-    }
-  }
-  .max-sm\:text-\[9\.7px\] {
-    @media (width < 40rem) {
-      font-size: 9.7px;
-    }
-  }
-  .max-sm\:text-\[9\.8px\] {
-    @media (width < 40rem) {
-      font-size: 9.8px;
-    }
-  }
-  .max-sm\:text-\[9\.9px\] {
-    @media (width < 40rem) {
-      font-size: 9.9px;
-    }
-  }
   .max-sm\:text-\[9px\] {
     @media (width < 40rem) {
       font-size: 9px;
-    }
-  }
-  .max-sm\:text-\[10\.1px\] {
-    @media (width < 40rem) {
-      font-size: 10.1px;
-    }
-  }
-  .max-sm\:text-\[10\.9px\] {
-    @media (width < 40rem) {
-      font-size: 10.9px;
     }
   }
   .max-sm\:text-\[10px\] {
@@ -3737,29 +3550,10 @@
       font-size: 10px;
     }
   }
-  .max-sm\:text-\[11px\] {
+  .max-sm\:font-light {
     @media (width < 40rem) {
-      font-size: 11px;
-    }
-  }
-  .max-sm\:text-\[12\.4px\] {
-    @media (width < 40rem) {
-      font-size: 12.4px;
-    }
-  }
-  .max-sm\:text-\[12px\] {
-    @media (width < 40rem) {
-      font-size: 12px;
-    }
-  }
-  .max-sm\:text-\[13px\] {
-    @media (width < 40rem) {
-      font-size: 13px;
-    }
-  }
-  .max-sm\:text-\[9xpx\] {
-    @media (width < 40rem) {
-      color: 9xpx;
+      --tw-font-weight: var(--font-weight-light);
+      font-weight: var(--font-weight-light);
     }
   }
   .sm\:write {
@@ -3769,11 +3563,6 @@
       white-space: nowrap;
       width: 612px;
       animation: typewriter 2.1s steps(48) alternate , blink 0.5s steps(48);
-    }
-  }
-  .sm\:grid-cols-1 {
-    @media (width >= 40rem) {
-      grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
   .md\:w-3\/4 {
@@ -4159,6 +3948,10 @@
   &:focus {
     outline-style: var(--tw-outline-style);
     outline-width: 0px;
+  }
+  @media (width < 40rem) {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
   }
 }
 .button_email {
