--- a/src/css/input.css
+++ b/src/css/input.css
@@ -375,6 +375,6 @@
   text-shadow: 0 2px 5px rgba(52, 52, 52);
 }
 
-.textShadowInit{
-  text-shadow: 0 1px 1px hsl(60, 10%, 10%);;
+.textShadowInit {
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 }
