New icon in mobile

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1125,6 +1125,9 @@
   .w-9 {
     width: calc(var(--spacing) * 9);
   }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
   .w-11 {
     width: calc(var(--spacing) * 11);
   }
